--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ pydantic-core==2.23.4
 python-dotenv==1.0.1
 python-multipart==0.0.17
 sniffio==1.3.1
+supabase==2.11.0
 starlette==0.41.3
 tqdm==4.67.0
 typing-extensions==4.12.2
